--- a/MathemathicalLinguisticsTask1/MathemathicalLinguisticsTask1/MainWindow.xaml
+++ b/MathemathicalLinguisticsTask1/MathemathicalLinguisticsTask1/MainWindow.xaml
@@ -5,8 +5,10 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MathemathicalLinguisticsTask1"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
+        Title="MainWindow" Height="350" Width="385">
     <Grid>
-        
+        <TextBox HorizontalAlignment="Left" Height="83" Margin="10,10,0,0" TextWrapping="Wrap" Text="0.00" VerticalAlignment="Top" Width="204" FontSize="72" FontFamily="Arial"/>
+        <TextBlock HorizontalAlignment="Left" Margin="312,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="142" Width="13" Background="Black"/>
+
     </Grid>
 </Window>
