--- a/MathemathicalLinguisticsTask1/MathemathicalLinguisticsTask1/MainWindow.xaml
+++ b/MathemathicalLinguisticsTask1/MathemathicalLinguisticsTask1/MainWindow.xaml
@@ -1,23 +1,91 @@
-﻿<Window x:Class="MathemathicalLinguisticsTask1.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:MathemathicalLinguisticsTask1"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="661.6" Width="385" ResizeMode="CanMinimize">
+﻿<Window
+    x:Class="MathemathicalLinguisticsTask1.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:MathemathicalLinguisticsTask1"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Title="MainWindow"
+    Width="385"
+    Height="661.6"
+    ResizeMode="CanMinimize"
+    mc:Ignorable="d">
     <Window.Background>
-        <ImageBrush ImageSource="Assets/parking-meter.jpg"/>
+        <ImageBrush ImageSource="Assets/parking-meter.jpg" />
     </Window.Background>
-    <Canvas>
-        <Grid x:Name="gridMain">
-        <TextBox x:Name="textBoxDisplay" HorizontalAlignment="Left" Height="41" Margin="147,107,0,0" TextWrapping="Wrap" Text="0.00" VerticalAlignment="Top" Width="95" FontSize="36" FontFamily="Arial" Background="{DynamicResource {x:Static SystemColors.InfoBrushKey}}" BorderBrush="Black" IsEnabled="False"/>
-        <TextBlock x:Name="textBlockInput" AllowDrop="True" HorizontalAlignment="Left" Margin="142,258,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="14" Width="100" Background="Black"/>
-        <Image HorizontalAlignment="Left" Height="428" Margin="25,319,0,-116" VerticalAlignment="Top" Width="300" Source="Assets/hands.png"/>
-        <Image x:Name="imageOnePLN" HorizontalAlignment="Left" Height="55" Margin="99,388,0,0" VerticalAlignment="Top" Width="48" Source="Assets/1pln.png" local:DraggableExtender.CanDrag="True"/>
-        <Image x:Name="imageTwoPLN" HorizontalAlignment="Left" Height="58" Margin="147,420,0,0" VerticalAlignment="Top" Width="56" Source="Assets/2pln.png" />
-        <Image x:Name="imageFivePLN" HorizontalAlignment="Left" Height="55" Margin="208,388,0,0" VerticalAlignment="Top" Width="55" Source="Assets/5pln.png"/>
-            <Label Content="Insert coin here" HorizontalAlignment="Left" Margin="134,277,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="14" Width="118" Foreground="#FF7A1111"/>
-        </Grid>
+    <Grid x:Name="gridMain">
+        <TextBox
+            x:Name="textBoxDisplay"
+            Width="95"
+            Height="41"
+            Margin="147,107,0,0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            Background="{DynamicResource {x:Static SystemColors.InfoBrushKey}}"
+            BorderBrush="Black"
+            FontFamily="Arial"
+            FontSize="36"
+            IsEnabled="False"
+            Text="0.00"
+            TextWrapping="Wrap" />
+        <TextBlock
+            x:Name="textBlockInput"
+            Width="100"
+            Height="14"
+            Margin="142,258,0,0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            AllowDrop="True"
+            Background="Black"
+            Drop="textBlockInput_Drop"
+            TextWrapping="Wrap" />
+        <Label
+            Width="118"
+            Margin="134,277,0,0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            Content="Insert coin here"
+            FontSize="14"
+            FontWeight="Bold"
+            Foreground="#FF7A1111" />
+        <Image
+            Width="300"
+            Height="428"
+            Margin="25,319,0,-116"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            Source="Assets/hands.png" />
+        <Canvas>
+            <Image
+                x:Name="imageOnePLN"
+                Width="48"
+                Height="55"
+                Margin="99,388,0,0"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                MouseMove="imageOnePLN_MouseMove"
+                Source="Assets/1pln.png" />
         </Canvas>
+        <Canvas>
+            <Image
+                x:Name="imageTwoPLN"
+                Width="56"
+                Height="58"
+                Margin="147,420,0,0"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                MouseMove="imageTwoPLN_MouseMove"
+                Source="Assets/2pln.png" />
+        </Canvas>
+        <Canvas>
+            <Image
+                x:Name="imageFivePLN"
+                Width="55"
+                Height="55"
+                Margin="208,388,0,0"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                Source="Assets/5pln.png" MouseMove="imageFivePLN_MouseMove" />
+        </Canvas>
+    </Grid>
 </Window>
