--- a/MathemathicalLinguisticsTask1/MathemathicalLinguisticsTask1/MainWindow.xaml
+++ b/MathemathicalLinguisticsTask1/MathemathicalLinguisticsTask1/MainWindow.xaml
@@ -29,7 +29,7 @@
             Text="0.00"
             TextWrapping="Wrap" />
         <TextBlock
-            x:Name="textBlockInput"
+            x:Name="textBlockInsert"
             Width="100"
             Height="14"
             Margin="142,258,0,0"
@@ -37,7 +37,7 @@
             VerticalAlignment="Top"
             AllowDrop="True"
             Background="Black"
-            Drop="textBlockInput_Drop"
+            Drop="textBlockInsert_Drop"
             TextWrapping="Wrap" />
         <Label
             Width="118"
@@ -85,7 +85,8 @@
                 Margin="208,388,0,0"
                 HorizontalAlignment="Left"
                 VerticalAlignment="Top"
-                Source="Assets/5pln.png" MouseMove="imageFivePLN_MouseMove" />
+                MouseMove="imageFivePLN_MouseMove"
+                Source="Assets/5pln.png" />
         </Canvas>
     </Grid>
 </Window>
