--- a/MathemathicalLinguisticsTask1/MathemathicalLinguisticsTask1/App.xaml
+++ b/MathemathicalLinguisticsTask1/MathemathicalLinguisticsTask1/App.xaml
@@ -1,9 +1,10 @@
-﻿<Application x:Class="MathemathicalLinguisticsTask1.App"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:MathemathicalLinguisticsTask1"
-             StartupUri="MainWindow.xaml">
+﻿<Application
+    x:Class="MathemathicalLinguisticsTask1.App"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:local="clr-namespace:MathemathicalLinguisticsTask1"
+    StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <local:ParkingMeter x:Key="parkingMeter" />
     </Application.Resources>
 </Application>
